--- a/components/footer.html
+++ b/components/footer.html
@@ -1,19 +1,16 @@
 
-      <div
-        style="
-          width: 85%;
-          margin: auto;
-          display: flex;
-          flex-wrap: wrap;
-          align-items: flex-start;
-          justify-content: space-between;
-        "
+<script
+src="https://kit.fontawesome.com/1fc1497e59.js"
+crossorigin="anonymous"
+></script>
+    <div
+      
       >
-        <div style="flex-basis: 25%; padding: 10px">
+        <div >
           <span>
             <img
               id="logo-image"
-              src="./assets/icons/logo.png"
+              src="../assets/icons/logo.png"
               alt="logo"
               width="20"
               ;
