--- a/styles/home.css
+++ b/styles/home.css
@@ -260,3 +260,44 @@ footer {
   position: relative;
   box-sizing: border-box;
 }
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+
+.modal-content {
+  border: 2px solid #ccc; /* Add border */
+  border-radius: 10px; /* Add border radius */
+  background-color: #fefefe; /* Background color for the modal content */
+  margin: 15% auto; /* Center the modal vertically and horizontally */
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+  max-width: 80%; /* Set maximum width for the modal content */
+
+}
+.modal-content p{
+  padding: 5px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
