--- a/styles/home.css
+++ b/styles/home.css
@@ -92,23 +92,23 @@ header a:hover {
     position: absolute;
     right: 1rem;
   }
-.drop_menu {
-  display: none;
-}
+  .drop_menu {
+    display: none;
+  }
 
-.drop_menu.active {
-  display: block;
-}
+  .drop_menu.active {
+    display: block;
+  }
 
   .hero-text {
     position: absolute;
     justify-content: center;
     text-align: center;
   }
-} 
-  .drop_menu.active {
-    display: block;
-  }
+}
+.drop_menu.active {
+  display: block;
+}
 .second-banner .card {
   display: flex;
   background-color: #fff;
@@ -159,7 +159,7 @@ header a:hover {
 }
 
 .card:hover {
-  box-shadow:  0 10px 60px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 60px 0 rgba(0, 0, 0, 0.1);
   border: #000 solid 2px;
   transform: translatey(-5px);
 }
@@ -176,7 +176,6 @@ header a:hover {
 .container {
   margin: 5% auto;
   width: 75%;
-  
 }
 .container img {
   max-width: 350px;
@@ -261,18 +260,17 @@ footer {
   box-sizing: border-box;
 }
 .modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-
 
 .modal-content {
   border: 2px solid #ccc; /* Add border */
@@ -282,10 +280,69 @@ footer {
   padding: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Add a shadow effect */
   max-width: 80%; /* Set maximum width for the modal content */
-
 }
-.modal-content p{
+.modal-content p {
   padding: 5px;
+}
+.centercon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust the height of the container as needed */
+}
+.cont {
+  display: flex;
+  position: relative;
+  height: 50%;
+  justify-content: center;
+  align-items: center;
+  font-family: "Amiri", serif;
+  font-size: 14px;
+  color: #000;
+  border: solid 5px hsl(0deg 39.69% 70.23%);
+  display: inline-block;
+  width: 70%;
+  margin: 5% auto;
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+  padding: 1em;
+  line-height: 1.5em;
+  background: rgb(255, 255, 255);
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-pagination-bullet {
+  height: 5px; /* Set the height of the line */
+  width: 40px; /* Set the width of the line */
+  border-radius: 0; /* Remove border-radius to make it a straight line */
+  background-color: #bdbbbb; /* Set the color of the line */
+  opacity: 1; /* Ensure the line is fully visible */
+  margin: 0 5px; /* Adjust the spacing between each line */
+}
+.swiper-pagination-bullet-active {
+  background-color: black;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .close {
@@ -300,4 +357,94 @@ footer {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.tabb {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.tabb h2 {
+  font-size: 26px;
+  margin: 20px 0;
+  text-align: center;
+  small {
+    font-size: 0.5em;
+  }
+}
+
+.responsive-table {
+  li {
+    border-radius: 3px;
+    padding: 25px 30px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+  .table-header {
+    background-color: #faeffb;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+  }
+  .table-row {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+  }
+  .col-1 {
+    flex-basis: 30%;
+  }
+  .col-2 {
+    flex-basis: 25%;
+  }
+  .col-3 {
+    flex-basis: 25%;
+  }
+  .col-4 {
+    flex-basis: 25%;
+  }
+
+  @media all and (max-width: 767px) {
+    .table-header {
+      display: none;
+    }
+    
+    li {
+      display: block;
+    }
+    .col {
+      flex-basis: 100%;
+    }
+    .col {
+      display: flex;
+      padding: 10px 0;
+      &:before {
+        color: #6c7a89;
+        padding-right: 10px;
+        content: attr(data-label);
+        flex-basis: 50%;
+        text-align: right;
+      }
+    }
+  }
+}
+#pagination-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#pagination-container button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin: 0 3px;
+  font-size: 16px;
+}
+
+#pagination-container button.active {
+  background-color: #ccc; /* Change this to the desired color */
 }
