--- a/styles/book.css
+++ b/styles/book.css
@@ -4,17 +4,19 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  position: relative;
-
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    position: relative;
+  
   width: 100%;
-
+  
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
@@ -101,6 +103,17 @@ header a:hover {
     text-align: center;
   }
 }
+main {
+    padding: 20px;
+}
+
+section {
+    margin-bottom: 30px;
+}
+
+h1, h2 {
+    color: #333;
+}
 
 footer {
   width: 100%;
@@ -110,8 +123,10 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  bottom: 0;
+
+margin-top: auto;
 }
+
 .books {
   display: grid;
   grid-template-columns: auto auto auto auto;
